examples/misc/error/top_codegen-missing.bfr
let k x y =
  x

let s x y z =
  x z (y z)

let i = s k k